working on auth

--- a/browser/templates/login.html
+++ b/browser/templates/login.html
@@ -3,7 +3,7 @@
 	<br>
 	<input class='form-control' placeholder='password' ng-model='password'></input>
 	<br>
-	<button class='btn btn-primary'>Login</button>
+	<button class='btn btn-primary' ng-click='login()'>Login</button>
 </div>
 
 <div class='well'>
