--- a/browser/templates/login.html
+++ b/browser/templates/login.html
@@ -1,9 +1,9 @@
 <div class='well'>
-	<input class='form-control' placeholder='username' ng-model='user.username'></input>
+	<input class='form-control' placeholder='username' ng-model='credentials.username'></input>
 	<br>
-	<input class='form-control' placeholder='password' ng-model='user.password'></input>
+	<input class='form-control' placeholder='password' ng-model='credentials.password'></input>
 	<br>
-	<button class='btn btn-primary' ng-click='login(user)'>Login</button>
+	<button class='btn btn-primary' ng-click='login(credentials)'>Login</button>
 </div>
 
 <div class='well'>
